--- a/space-astro.html
+++ b/space-astro.html
@@ -333,7 +333,7 @@
         <div id="main">
             <br>
             <div class="container">
-                <h1 class="glow-text">Astronauts in flights</h1>
+                <h1 class="glow-text">Cosmonauts in flights</h1>
                 <div id="astronautsData">Loading...</div>
             </div>
 
