--- a/credits.html
+++ b/credits.html
@@ -157,8 +157,7 @@
                         class="w3-tag w3-small">The W3 CSS framework</a></p><br>
                 <p class="artout text-bl"> <a href="https://github.com/souravm84/vidbacking"
                         class="w3-tag w3-small">JQuery Vidbacking Plugin</a></p><br>
-                <p class="artout text-bl"> <a href="https://bennettfeely.com/ztext/" class="w3-tag w3-small">JQuery
-                        Ztext Plugin</a></p><br>
+               
                 <p class="artout text-bl"> <a href="https://webglearth.com/v2/api.js" class="w3-tag w3-small">Webglearth
                         API</a></p><br>
 
@@ -169,7 +168,7 @@
                 <p>-------------</p>
                 <p class="w3-container  artout w3-light-blue test2"><b>FABRIQUEZ VOTRE ASTRO-WATCH :</b></p><br>
                 
-                <p class="w3-container  w3-center w3-auto artout gif"><iframe src="https://frnck.w3spaces.com/" height="600px" width="400px"></iframe></p><br>
+                <p class="w3-container  w3-center w3-auto artout gif"><img src="https://imgur.com/a/zI7wnHh" height="600px" width="400px"></img></p><br>
                 <p class="testc artout w3-light-blue"><br>Fabriquez votre "astro-notifier", qui vous tiendra informé des <b>astronautes en vol</b> à bord de l'ISS.<br><br>Téléchargez les fichiers de  code
                         C++ </b>utilisable sur l'IDE Arduino. Versions pour ESP8266NodemCu, WifiKit8 (<i>exemple de la
                     photo sur montre à gousset</i>), et sur WemosD1, avec écrans Oled 0,96 ou Tft 1,8pouces.</p><br><br>
