--- a/credits.html
+++ b/credits.html
@@ -168,7 +168,7 @@
                 <p>-------------</p>
                 <p class="w3-container  artout w3-light-blue test2"><b>FABRIQUEZ VOTRE ASTRO-WATCH :</b></p><br>
                 
-                <p class="w3-container  w3-center w3-auto artout gif"><img src="https://imgur.com/a/zI7wnHh" height="600px" width="400px"></img></p><br>
+                <p class="w3-container  w3-center w3-auto artout gif"><blockquote class="imgur-embed-pub" lang="en" data-id="a/zI7wnHh"  ><a href="//imgur.com/a/zI7wnHh">Space watch, by Cyclotronic</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script></p><br>
                 <p class="testc artout w3-light-blue"><br>Fabriquez votre "astro-notifier", qui vous tiendra informé des <b>astronautes en vol</b> à bord de l'ISS.<br><br>Téléchargez les fichiers de  code
                         C++ </b>utilisable sur l'IDE Arduino. Versions pour ESP8266NodemCu, WifiKit8 (<i>exemple de la
                     photo sur montre à gousset</i>), et sur WemosD1, avec écrans Oled 0,96 ou Tft 1,8pouces.</p><br><br>
