--- a/credits.html
+++ b/credits.html
@@ -74,7 +74,7 @@
 		}
 
 		.gif {
-			width: auto;
+			width: 300;
 			height: auto;
 			object-fit: contain;
 			/* Maintain aspect ratio and cover the container */
