--- a/credits.html
+++ b/credits.html
@@ -74,10 +74,9 @@
 		}
 
 		.gif {
-			width: 300;
-			height: auto;
-			object-fit: contain;
-			/* Maintain aspect ratio and cover the container */
+			width: 250;
+			height: 350;
+			
 			margin: 0 auto;
 			/* Center the image horizontally */
 		}
