--- a/credits.html
+++ b/credits.html
@@ -167,7 +167,7 @@
                 <p>-------------</p>
                 <p class="w3-container  artout w3-light-blue test2"><b>FABRIQUEZ VOTRE ASTRO-WATCH :</b></p><br>
 		             
-                <p class="w3-container  w3-center w3-auto"><img src="spacewatch-small.gif" ></img></p><br>
+                <p class="w3-container"><img src="spacewatch-small.gif" ></img></p><br>
                 
                 <p class="testc artout w3-light-blue"><br>Fabriquez votre "astro-notifier", qui vous tiendra informé des <b>astronautes en vol</b> à bord de l'ISS.<br><br>Téléchargez les fichiers de  code
                         C++ </b>utilisable sur l'IDE Arduino. Versions pour ESP8266NodemCu, WifiKit8 (<i>exemple de la
