--- a/exo-arecibo.html
+++ b/exo-arecibo.html
@@ -321,17 +321,17 @@
         // Create the HTML structure
         document.getElementById("statisticsData").innerHTML = `
             <div class="w3-container glow-box w3-animate-zoom">
-                <h2>✨ Exoplanètes confirmées: ✨</h2>
+                <h2>✨ Exoplanètes confirmées: </h2>
                 <p class="glow-number" id="confirmedPlanets">0</p>
             </div>
 
             <div class="w3-container glow-box w3-animate-zoom">
-                <h2>🌍 Planètes Habitables confirmées: 🌍</h2>
+                    <h2>🌍 Planètes Habitables confirmées:</h2>
                 <p class="glow-number" id="confirmedHabitablePlanets">0</p>
             </div>
 
             <div class="w3-container glow-box w3-animate-zoom">
-                <h2>🌙 Lunes habitables: 🌙</h2>
+                <h2>🌙 Lunes habitables: </h2>
                 <p class="glow-number" id="possibleHabitableMoons">0</p>
             </div>
         `;
