--- a/credits.html
+++ b/credits.html
@@ -118,7 +118,21 @@
 		<a href="exo-arecibo.html" class="w3-button"><img src="saturne.png" height="50px" width="40px"></img></a>
 		<a href="apod.html" class="w3-button"><img src="telescope.png" height="50px" width="40px"></img></a>
         </div>
+<video poster="starryNight2.jpeg" autoplay muted loop class="vidbacking">
+      
+      </video>
 
+      <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+      <script src="jquery.vidbacking.js"
+        type="text/javascript"></script>
+      <script type="text/javascript">
+        $(function () {
+          $('body').vidbacking({
+            'masked': false
+          });
+        });
+      </script>
         <!-- Start Content -->
         <div id="main" class="w3-mobile">
            
