Remove CORS proxy from API URL

--- a/exo-arecibo.html
+++ b/exo-arecibo.html
@@ -379,7 +379,7 @@ document.addEventListener('DOMContentLoaded', fetchData);
                 
                 <script>
                async function fetchData() {
-    const apiUrl = "https://corsproxy.io/?https://exoplanethunter.com/api/Chart/PlanetTypes?type=0";
+    const apiUrl = "https://exoplanethunter.com/api/Chart/PlanetTypes?type=0";
 
     try {
         const typeresponse = await fetch(apiUrl);
